--- a/apps/school-web/package.json
+++ b/apps/school-web/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "acl": "file:../../packages/acl"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
