--- a/packages/acl/package.json
+++ b/packages/acl/package.json
@@ -2,7 +2,8 @@
   "name": "acl",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "tsx src/index.ts",
     "build": "tsc",
