--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -10,6 +10,7 @@
     "test": "echo The app name is $npm_package_name and version is $npm_package_version"
   },
   "dependencies": {
+    "@mixz/acl": "workspace:^",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
