add release config

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "lerna run build",
     "test": "lerna run test"
   },
   "keywords": [],
