--- a/packages/acl/package.json
+++ b/packages/acl/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "module": "dist/index.esm.js",
   "scripts": {
-    "dev": "tsx src/index.ts",
-    "build": "tsc",
+    "build": "tsup src/index.ts --format cjs,esm --dts",
     "test": "vitest run"
   },
   "keywords": [],
@@ -16,7 +16,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "tsx": "^4.7.0",
+    "tsup": "^8.0.1",
     "vitest": "^1.1.2"
   }
 }
