--- a/apps/school-web/package.json
+++ b/apps/school-web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "school-web",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.1.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,7 +11,7 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@mixz/acl": "file:../../packages/acl",
+    "@drifterz13/acl": "file:../../packages/acl",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
