--- a/packages/acl/package.json
+++ b/packages/acl/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mixz/acl",
-  "version": "0.1.2",
+  "name": "@drifterz13/acl",
+  "version": "0.1.3",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
