--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "21.x"
+          node-version: "21"
           cache: "pnpm"
 
       - uses: pnpm/action-setup@v2
