--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,8 +20,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "21.x"
-          cache: "pnpm"
+          node-version: "21"
 
       - uses: pnpm/action-setup@v2
         name: Install pnpm
