--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portal-web",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,7 +10,7 @@
     "test": "echo The app name is $npm_package_name and version is $npm_package_version"
   },
   "dependencies": {
-    "@drifterz13/acl": "workspace:^",
+    "@drifterz13/acl": "^0.1.8",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
