--- a/apps/school-web/package.json
+++ b/apps/school-web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "school-web",
   "private": true,
-  "version": "0.1.2",
+  "version": "0.1.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,7 +11,7 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@drifterz13/acl": "workspace:^",
+    "@drifterz13/acl": "^0.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
